--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
     "target": "ESNext",
     "lib": [
       "dom",
@@ -23,5 +24,6 @@
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["**/node_modules/**", "build/**", "public/**"]
 }
