--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@pbe/react-yandex-maps": "^1.2.4",
+        "@tanstack/react-query": "^4.35.7",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -11,6 +12,7 @@
         "@types/node": "^16.18.53",
         "@types/react": "^18.2.22",
         "@types/react-dom": "^18.2.7",
+        "axios": "^1.5.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.16.0",
