--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
               run: npm install
 
             - name: Запуск тестов
-              run: npm test
+              run: npm run test
 
             - name: Запуск lint
               run: npm run lint
