--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.2",
         "@types/node": "^16.18.53",
         "@types/react": "^18.2.22",
         "@types/react-dom": "^18.2.7",
@@ -52,12 +51,14 @@
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@types/jest": "^29.5.5",
         "eslint": "^8.50.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-import": "^2.28.1",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "jest": "^27.5.1",
         "prettier": "^3.0.3",
         "sass": "^1.68.0",
         "stylelint": "^15.10.3",
