исправил ошибку с типами для jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["react", "react-dom"],
+    "types": ["react", "react-dom", "jest"],
     "paths": {
       "@/*": ["/*"],
-    }
+    },
   },
   "include": [
     "src"
