--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "jest",
         "eject": "react-scripts eject",
         "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,scss,css}\"",
         "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
@@ -57,6 +57,7 @@
         "eslint-plugin-import": "^2.28.1",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "jest": "^29.7.0",
         "prettier": "^3.0.3",
         "sass": "^1.68.0",
         "stylelint": "^15.10.3",
