--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Установка зависимостей
-              run: npm ci
+              run: npm install
 
             - name: Запуск тестов
               run: npm run test
