Создал регистрацию и авторизацию

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,15 @@
         "es2021": true
     },
     "extends": [
-        "react-app", 
+        "react-app",
         "react-app/jest",
         "plugin:react/recommended",
+        "plugin:storybook/recommended",
         "plugin:react/jsx-runtime",
         "plugin:react-hooks/recommended",
         "plugin:import/recommended",
         "prettier"
+       
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
