--- a/package.json
+++ b/package.json
@@ -1,67 +1,91 @@
 {
-    "name": "maroon",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@pbe/react-yandex-maps": "^1.2.4",
-        "@tanstack/react-query": "^4.35.7",
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/node": "^16.18.53",
-        "@types/react": "^18.2.22",
-        "@types/react-dom": "^18.2.7",
-        "axios": "^1.5.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-draggable": "^4.4.6",
-        "react-router-dom": "^6.16.0",
-        "react-scripts": "5.0.1",
-        "typescript": "^4.9.5",
-        "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,scss,css}\"",
-        "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
-        "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src --fix",
-        "stylelint": "stylelint \"**/*.{css,scss}\"",
-        "stylelint:fix": "stylelint \"**/*.{css,scss}\" --fix"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@types/jest": "^29.5.5",
-        "eslint": "^8.50.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-config-react-app": "^7.0.1",
-        "eslint-plugin-import": "^2.28.1",
-        "eslint-plugin-react": "^7.33.2",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "jest": "^27.5.1",
-        "prettier": "^3.0.3",
-        "sass": "^1.68.0",
-        "stylelint": "^15.10.3",
-        "stylelint-config-standard-scss": "^11.0.0"
-    }
+  "name": "maroon",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@pbe/react-yandex-maps": "^1.2.4",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^4.35.7",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/js-cookie": "^3.0.5",
+    "@types/node": "^16.18.53",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "axios": "^1.5.1",
+    "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,scss,css}\"",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src --fix",
+    "stylelint": "stylelint \"**/*.{css,scss}\"",
+    "stylelint:fix": "stylelint \"**/*.{css,scss}\" --fix",
+    "serve": "json-server --watch db.json --port 3004",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@storybook/addon-essentials": "^7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
+    "@storybook/addon-links": "^7.5.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.5.1",
+    "@storybook/preset-create-react-app": "^7.5.1",
+    "@storybook/react": "^7.5.1",
+    "@storybook/react-webpack5": "^7.5.1",
+    "@storybook/testing-library": "^0.2.2",
+    "@types/jest": "^29.5.5",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-named-exports-order": "^0.0.2",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.15",
+    "jest": "^27.5.1",
+    "prettier": "^3.0.3",
+    "prop-types": "^15.8.1",
+    "sass": "^1.68.0",
+    "storybook": "^7.5.1",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard-scss": "^11.0.0",
+    "webpack": "^5.89.0"
+  }
 }
