--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,11 @@
     "jsx": "react-jsx",
     "types": ["react", "react-dom", "jest"],
     "paths": {
-      "@/*": ["/*"],
+      "~/": ["./src/"]
     },
   },
   "include": [
-    "src"
+    "src",
   ],
   "exclude": ["**/node_modules/**", "build/**", "public/**"]
 }
