Создал страницу корзины

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@pbe/react-yandex-maps": "^1.2.4",
         "@reduxjs/toolkit": "^1.9.7",
+        "@tabler/icons-react": "^2.40.0",
         "@tanstack/react-query": "^4.35.7",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
