--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "@pbe/react-yandex-maps": "^1.2.4",
         "@reduxjs/toolkit": "^1.9.7",
         "@tabler/icons-react": "^2.40.0",
-        "@tanstack/react-query": "^4.35.7",
+        "@tanstack/react-query": "^4.36.1",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -16,9 +16,11 @@
         "@types/react-dom": "^18.2.7",
         "axios": "^1.5.1",
         "formik": "^2.4.5",
+        "framer-motion": "^10.16.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-draggable": "^4.4.6",
+        "react-intersection-observer": "^9.5.3",
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.16.0",
         "react-scripts": "5.0.1",
